# semantic_pdf

./: .gitignore  License  README.md  pyproject.toml
pdf_segmentation/: image_payload_builder.py
pdf_segmentation/annotator/: __init__.py  pdf_annotator.py
pdf_segmentation/graph/: graph.py
pdf_segmentation/pdf_llm/: __init__.py
pdf_segmentation/pdf_seperator/: pdf_seperator.py
pdf_segmentation/src/: __init__.py  helper.py
pdf_segmentation/type/: models.py
pdf_segmentation/utils/: __init__.py  langchain_utils.py
src/: Untitled-1.ipynb  image_payload_builder.py  pdf_annotator.py  pdf_llm.py
src/graph/: graph.py
src/pdf_image_converter/: pdf_image_converter.py
src/pdf_segmentation/: __init__.py  helper.py  types.py
src/pdf_segmentation/annotator/: pdf_annotator.py
src/pdf_segmentation/graph/: graph.py
src/pdf_segmentation/pdf_image_converter/: __init__.py
src/pdf_segmentation/pdf_llm/: pdf_llm.py
src/pdf_segmentation/pdf_seperator/: pdf_seperator.py
src/pdf_segmentation/type/: types.py
src/pdf_segmentation/utils/: image_utils.py  serialization_utils.py
src/pdf_seperator/: __init__.py  pdf_seperator.py
src/type/: __init__.py  models.py  types.py
